# helpdesk_support

./: .gitignore  CMakeLists.txt  main.cpp
cnn_model/: saved_model.pb
cnn_model/variables/: variables.index
notebook/: document_classification.ipynb
